--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "manifest_version": 2,
   "name": "__MSG_extensionName__",
   "description": "__MSG_extensionDescription__",
-  "version": "4.1.6",
+  "version": "4.2.0",
   "default_locale": "en",
 
   "applications": {
@@ -29,10 +29,10 @@
     "scripts": [
       "twitch-api.js",
       "authorize.js",
+      "follows.js",
       "storage.js",
       "notifications.js",
-      "alarm.js",
-      "follows.js"
+      "alarm.js"
     ]
   },
 
